[workspace]

members = [
  "p2prs-bootstrap-node",
  "p2prs-peer-discovery",
  "p2prs-pubsub",
  "bootstrap-node-v2",
  "subscriber-v2",
]


[workspace.dependencies]
libp2p = { version = "0.48.0", features = ["mdns-tokio"] }
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
